--- a/test-project/src/scss/components/header.scss
+++ b/test-project/src/scss/components/header.scss
@@ -38,12 +38,14 @@
     transition: transform 0.3s, border-color 0.3s;
     &.active {
       transform: scale(1.07);
+      .var_list_item_button{
+        transform: scale(0.93);
+      }
     }
     &:hover{
       //transform: scale(1.07);
       border: 1px solid #ff8d00;
       .var_list_item_button{
-        transform: scale(0.93);
         color:#fff;
         background:  #ff8d00;
         background-image: linear-gradient(0deg, #ff8d00 3%, #ffa400 100%);
