--- a/photographer/src/scss/style.scss
+++ b/photographer/src/scss/style.scss
@@ -5,12 +5,13 @@
 @import "core/core.scss";
 @import "components/header";
 @import "components/hamburger";
-@import "components/mobile-menu";
+@import "components/gallery";
 @import "components/wave-btn";
 @import "components/cursor";
 @import "components/hero";
 @import "components/timeline";
 @import "components/about-text";
 @import "components/cards";
+@import "components/masonry";
 @import "components/photo-card-block";
 @import "components/footer";
