--- a/photographer/src/scss/components/cards.scss
+++ b/photographer/src/scss/components/cards.scss
@@ -1,69 +1,163 @@
 .cards-wrapper{
+  padding: 50px 0;
   background: #000000;
-  padding: 60px 15px;
 }
-.cards{
-  display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
-  grid-gap: 40px;
+
+.card-list{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  .card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 30px 0;
+    padding: 0 5px;
+    box-shadow: 0 20px 50px rgba(0,0,0,0.4);
+    overflow: hidden;
+    &::before{
+      content: '';
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      bottom:2px;
+      width: 50%;
+      background: rgba(255,255,255,0.1);
+      pointer-events: none;
+    }
+    &:hover{
+      span{
+        opacity: 1;
+      }
+    }
+    span{
+      position: absolute;
+      opacity: 0;
+      transition: 0.5s;
+      &:nth-child(1){
+        top:0;
+        left: 0;
+        width: 100%;
+        height: 3px;
+        background:linear-gradient(to right,transparent,#1779ff);
+        animation: cardanimate1 2s linear infinite;
+
+      }
+      &:nth-child(2){
+        top:0;
+        right: 0;
+        width: 3px;
+        height: 100%;
+        background:linear-gradient(to bottom,transparent,#1779ff);
+        animation: cardanimate2 2s linear infinite;
+        animation-delay: 1s;
+      }
+      &:nth-child(3){
+        bottom:0;
+        left: 0;
+        width: 100%;
+        height: 3px;
+        background:linear-gradient(to left,transparent,#1779ff);
+        animation: cardanimate3 2s linear infinite;
+      }
+      &:nth-child(4){
+        top:0;
+        left: 0;
+        width: 3px;
+        height: 100%;
+        background:linear-gradient(to top,transparent,#1779ff);
+        animation: cardanimate4 2s linear infinite;
+        animation-delay: 1s;
+      }
+    }
+    .card-content{
+      padding: 50px 0;
+      text-align: center;
+      &:hover{
+        h3{
+          opacity: 1;
+          transform: translateY(-70px);
+        }
+        h4,p{
+          opacity: 1;
+        }
+      }
+      h3{
+        position: absolute;
+        right: 30px;
+        font-size: 4em;
+        font-weight: 800;
+        color:#1779ff;
+        z-index: 1;
+        opacity: 0.1;
+        transition: 0.5s;
+      }
+      h4{
+        position: relative;
+        font-size: 1.5em;
+        color:#ffffff;
+        z-index: 2;
+        opacity: 0.5;
+        letter-spacing: 1px;
+        transition: 0.5s;
+      }
+      p{
+        position: relative;
+        font-size: 1em;
+        color:#ffffff;
+        z-index: 2;
+        opacity: 0.5;
+        font-weight: 300;
+        letter-spacing: 1px;
+        transition: 0.5s;
+      }
+      a{
+        display: inline-block;
+        margin-top: 15px;
+        padding: 8px 15px;
+        background: #ffffff;
+        color:#0c002b;
+        text-transform: uppercase;
+        font-weight: 600;
+      }
+    }
+  }
 }
-.card{
-  background-color: #1c1b29;
-  border-radius: 20px;
-  box-shadow: 0 0 30px rgba(0,0,0,0.18);
+
+@keyframes cardanimate1 {
+  0%{
+    transform:translateX(-100%);
+  }
+  100%{
+    transform:translateX(100%);
+  }
 }
-.card-container{
-  position: relative;
-  clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);
+@keyframes cardanimate2 {
+  0%{
+    transform:translateY(-100%);
+  }
+  100%{
+    transform:translateY(100%);
+  }
 }
-.card-container img{
-  width: 100%;
-  display: block;
-  border-radius: 20px 20px 0 0;
+
+@keyframes cardanimate3 {
+  0%{
+    transform:translateX(100%);
+  }
+  100%{
+    transform:translateX(-100%);
+  }
 }
-.card-container:after{
-  content: "";
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 20px 20px 0 0;
-  opacity: 0.7;
+
+@keyframes cardanimate4 {
+  0%{
+    transform:translateY(100%);
+  }
+  100%{
+    transform:translateY(-100%);
+  }
 }
-.card1>.card-container:after{
-  background-image: linear-gradient(
-                  135deg,
-                  #0100ec,
-                  #fb36f4
-  );
-}
-.card2>.card-container:after{
-  background-image: linear-gradient(
-                  135deg,
-                  #2bdce3,
-                  #42ffdb
-  );
-}
-.card3>.card-container:after{
-  background-image: linear-gradient(
-                  135deg,
-                  #ffab1d,
-                  #f8501c
-  );
-}
-.details{
-  padding: 20px 10px;
-}
-.details>h3{
-  color: #ffffff;
-  font-weight: 600;
-  font-size: 18px;
-  margin: 10px 0 15px 0;
-}
-.details>p{
-  color: #a0a0a0;
-  font-size: 15px;
-  line-height: 30px;
-  font-weight: 400;
-}
+
